spacing fixed

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -126,7 +126,7 @@
 	#about {
 		background-color: #729799;
 		min-height: 100%;
-		padding: 15% 10px;
+		padding: 8% 10px;
 		text-align: center;
 		z-index: 1;
 	}
